Fix text-align to left for dropdown item on resolution < 480px

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -1844,6 +1844,7 @@ table .span24 {
   padding: 3px 15px;
   clear: both;
   font-weight: normal;
+  text-align: left;
   line-height: 18px;
   color: #333333;
   white-space: nowrap;
